--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@ clipeus fatetur, mira inter accedere. Dedit dum...</p>
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 text-center text-white">
         <h2>Our Difference</h2>
-        <p>Lorem ipsum dolor sit amet, et essent mediocritatem quo, choro volumus oporteat an mei. ipsum dolor sit amet, et essent mediocritatem quo,</p>
+        <p>Lorem ipsum dolor sit amet, et essent mediocritatem quo, choro volumus oporteat an mei. ipsum dolor sit amet, et essent mediocritatem quo, IO SCRIVO QUI PER VEDERE SE VA IN PORTO LA COMMIT</p>
 
         <a class="button button-white" href="/about">About Us</a>
       </div>
